<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="model"
            type="com.gca.mygca.ui.HomeViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_50sdp">


           <com.denzcoskun.imageslider.ImageSlider
               android:id="@+id/image_slider"
               android:layout_width="match_parent"
               android:layout_margin="@dimen/_10sdp"
               android:layout_height="@dimen/_250sdp"
               app:iss_auto_cycle="true"
               app:iss_indicator_align="none"
               app:iss_period="3000"
               app:iss_delay="0"
               app:layout_constraintStart_toStartOf="parent"
               app:layout_constraintEnd_toEndOf="parent"
               app:layout_constraintTop_toTopOf="parent"
               />



        <HorizontalScrollView
            android:scrollbars="none"
            android:id="@+id/tab1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/image_slider"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/fee_structure"
                        app:cardCornerRadius="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp">

                        <ImageView
                            android:src="@drawable/fees"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp"/>


                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/tvFeeStructure"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/fee_structure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>



                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/manage_image_gallery"
                        app:cardCornerRadius="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp">

                        <ImageView
                            android:id="@+id/img_1"
                            android:src="@drawable/images"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp" />

                    </androidx.cardview.widget.CardView>
                    <TextView

                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/gallery_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>




                <LinearLayout
                    android:id="@+id/videosLayout"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/manageVideoGallery"
                        app:cardCornerRadius="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp">

                        <ImageView
                            android:id="@+id/imageVideos"
                            android:layout_gravity="center"
                            android:src="@drawable/videos"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/tvGalleryVideos"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/gallery_video"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>

        <HorizontalScrollView
            android:id="@+id/tab2"
            android:scrollbars="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tab1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
            <LinearLayout
                android:layout_gravity="center_horizontal"
                android:padding="2dp"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/manage_departure"
                        app:cardCornerRadius="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp">



                        <ImageView
                            android:id="@+id/img_departure"
                            android:src="@drawable/deeparture"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp" />

                    </androidx.cardview.widget.CardView>
                    <TextView

                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/easy_departure"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>




                <LinearLayout
                    android:id="@+id/transport_layout"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardTransport"
                        app:cardCornerRadius="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp">

                        <ImageView
                            android:id="@+id/imageTransport"
                            android:src="@drawable/transport"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/tvTransport"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_11sdp"
                        android:text="@string/transport_fees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/slider_layout"
                    android:gravity="center"
                    android:padding="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cardSlider"
                        app:cardCornerRadius="20dp"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_60sdp">

                        <ImageView
                            android:id="@+id/ivSlider"
                            android:src="@drawable/slideshow"
                            android:layout_gravity="center"
                            android:layout_width="@dimen/_80sdp"
                            android:layout_height="@dimen/_50sdp" />
                    </androidx.cardview.widget.CardView>
                    <TextView
                        android:id="@+id/tvSlider"
                        android:layout_marginTop="10dp"
                        android:textSize="@dimen/_11sdp"
                        android:text="Image Slider"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />

                </LinearLayout>
            </LinearLayout>
        </HorizontalScrollView>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>
    </ScrollView>
</layout>